# delivery_robot

./: CMakeLists.txt  Dockerfile  State diagram.uml  all_tasks.xlsx  class.cpp  class.vcxproj  final_automat.cpp  main.cpp  main_Robot.cpp  main_Robot.h  main_Robot.vcxproj  main_Robot.vcxproj.filters  route.cpp  route.h  sequence_diagram.uml  state_diagram.uml  tgbot.cpp  tgbot.h  use_case.uml
class/: class.vcxproj  class.vcxproj.filters  main_Robot.cpp
doc/: conceptual_model.uml  route.uml  sequence_diagram.uml  state_diagram.uml  Отчёт АрхИС.docx
main_Robot/: CMakeLists.txt  main_Robot.cpp  main_Robot.vcxproj  main_Robot.vcxproj.filters
